Get Week 7 to work with java17