@@ -4,59 +4,77 @@
   <artifactId>Week7</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>17</java.version>
+		
+		<JavaFX.Version>17</JavaFX.Version>
+		<JavaFX.Platform>win</JavaFX.Platform>
+		
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<junit-platform.version>5.3.1</junit-platform.version>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M4</version>
 				<configuration>
-					<release>15</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
 				</configuration>
 			</plugin>
 
 
 			<plugin>
-				<groupId>org.openjfx</groupId>
-				<artifactId>javafx-maven-plugin</artifactId>
-				<version>0.0.2</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M4</version>
 				<configuration>
-					<mainClass>pkgMain.HelloFX</mainClass>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 
-	<properties>
-
-		<!-- Generic properties -->
-		<java.version>1.13</java.version>
-		<JavaFX.Version>13</JavaFX.Version>
-		<JavaFX.Platform>win</JavaFX.Platform>
-		<!-- <JavaFX.Platform>mac</JavaFX.Platform> -->
-		<!-- <JavaFX.Platform>linux</JavaFX.Platform> -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Spring -->
-		<spring-framework.version>5.1.8.RELEASE</spring-framework.version>
-
-		<!-- Hibernate / JPA -->
-		<hibernate.version>5.0.2.Final</hibernate.version>
-
-		<!-- Logging -->
-		<logback.version>1.2.3</logback.version>
-		<slf4j.version>1.7.12</slf4j.version>
-
-		<!-- Test -->
-		<junit.version>4.12</junit.version>
-
-	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit-platform.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-platform.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-commons</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		
+		
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
@@ -86,8 +104,7 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>${JavaFX.Version}</version>
 		</dependency>
+		
 	</dependencies>
-
-
 
 </project>
